--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -9,7 +9,7 @@
   height: auto;
   display: inline-block;
   margin-bottom: 10px;
-  position: relative;
+  //position: relative;
 }
 
 .dash_image {
@@ -31,8 +31,6 @@
   width: 33.3%;
   position: absolute;
   z-index: 10;
-  top: 0;
-  left: 0;
 }
 
 .dash_image a {
