--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -6,18 +6,13 @@
 
 
           <!--<img src="<%#= project.dash_image.url %>" class="style_image">-->
-
-          <section class='hidden_content'>
-            <article>
-              <%= project.title %>
-            </article>
-            <article>
-              <%= project.description %>
-            </article>
-          </section>
-
-          </img>
-
+          <a href="/projects/<%= project.id %>">
+            <section class='hidden_content'>
+              <article>
+                <h3><%= project.title %></h3>
+              </article>
+            </section>
+          </a>
           <%= link_to(image_tag(project.dash_image.url, class: 'style_image'), project) %>
         </section>
     <% end %>
