--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -8,8 +8,7 @@
   width: 100%;
   height: auto;
   display: inline-block;
-  margin-bottom: 10px;
-  //position: relative;
+  margin-bottom: -4px;
 }
 
 .dash_image {
@@ -18,6 +17,7 @@
   margin-right: -4px;
   padding: 0;
   display: inline-block;
+  background: black;
   //position: absolute;
 }
 
@@ -25,8 +25,12 @@
   display: none;
 }
 
+.dash_image:hover img {
+  opacity: 0.2;
+}
+
 .dash_image:hover .hidden_content {
-  background: rgba(0, 0, 0, 0.8);
+  //background: rgba(0, 0, 0, 0.8);
   color: white;
   width: 33.3%;
   position: absolute;
@@ -35,7 +39,8 @@
 
 .hidden_content article {
   width: 100%;
-  padding: 15%;
+  padding: 5%;
+  font-size: 24px;
 }
 
 .dash_image a {
@@ -47,6 +52,11 @@
   border-bottom: 2px solid #e33d3d;
 }
 
+.image_padding {
+  width: 100%;
+  padding: 10px 0;
+  background: white;
+}
 
 // INDIVIDUAL PRODUCT STYLING
 .project_info_space {
@@ -104,7 +114,7 @@
 }
 
 // SMALLER SCREENS
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 700px), screen and (max-device-width: 700px) {
   .dash_image {
     width: 50%;
   }
@@ -135,7 +145,8 @@
 
   .hidden_content article {
     width: 100%;
-    padding: 10%;
+    padding: 5%;
+    font-size: 18px;
   }
 
   nav ul li a {
