--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -13,8 +13,10 @@
               </article>
             </section>
           </a>
-          <%= link_to(image_tag(project.dash_image.url, class: 'style_image'), project) %>
+          <%= image_tag(project.dash_image.url, class: 'style_image') %>
+          <section class='image_padding'></section>
         </section>
+
     <% end %>
   </article>
   <section class='footer_padding'></section>
