--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,8 +14,11 @@
     </article>
   </article>
 </section>
+<section class='image_padding_show'></section>
 <section class='ind_project_image'><%= image_tag @project.image_1.url, class: 'style_image' %></section>
+<section class='image_padding_show'></section>
 <section class='ind_project_image'><%= image_tag @project.image_2.url, class: 'style_image' %></section>
+<section class='image_padding_show'></section>
 <section class='ind_project_image'><%= image_tag @project.image_3.url, class: 'style_image' %></section>
 
 <section class='ind_project_padding'>
