--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -13,7 +13,8 @@
               </article>
             </section>
           </a>
-          <%= image_tag(project.dash_image.url, class: 'style_image') %>
+          <%= link_to(image_tag(project.dash_image.url, class: 'style_image'), project) %>
+
           <section class='image_padding'></section>
         </section>
 
