--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <nav>
       <ul>
         <li><%= link_to 'Work', root_path %></li>
-        <li><%= link_to 'Blog', blogs_path %></li>
+        <li><a href="http://mmitchelldesign.tumblr.com/">Blog</a> </li>
         <li><a href="#">About</a></li>
       </ul>
     </nav>
