--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -43,6 +43,9 @@
 }
 
 .dash_image a {
+  display: block;
+  width: 100%;
+  height: 100%;
   z-index: 1;
 }
 
@@ -152,10 +155,6 @@
     width: 100%;
     padding: 5%;
     font-size: 18px;
-  }
-
-  nav ul li a {
-    font-size: 1.3em;
   }
 
   .image_padding_show {
