--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the static controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.about_image {
+  height: 100px;
+  float: left;
+  background: blue;
+  width: 33.3%;
+}
+
+.about {
+  height: 100%;
+  float: left;
+  width: 66.6%;
+  background: orange;
+}
