update about styling, begin to add caching

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -3,5 +3,16 @@
 </section>
 
 <section class="about">
+  <article>
+    <h1>A Little About Me</h1>
 
+    <p>I’m a multi-disciplinary graphic designer located in
+      Manhattan, New York (wait not Brooklyn?!?) specializing
+      in web and user interface design. I received a degree in
+      Graphic and Interactive Communications ( dramatic right?)
+      in 2013 from Ringling College of Art and Design. Since then
+      I’ve been continuing to hone my skills and attempt to create
+      stuff that’s worth using. This being said, if you like what
+      you see…I’m open to freelance…feel free to reach out!</p>
+  </article>
 </section>
