--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -3,15 +3,30 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .about_image {
-  height: 100px;
-  float: left;
-  background: blue;
   width: 33.3%;
+  background: url('about_image.png') no-repeat;
+  background-size: cover;
+  height: 615px;
+  float: left;
 }
 
-.about {
-  height: 100%;
+.about article {
+  width: 56.6%;
+  margin: 10% 5%;
   float: left;
-  width: 66.6%;
-  background: orange;
+}
+
+@media screen and (max-width: 700px), screen and (max-device-width: 700px) {
+  .about_image {
+    background: url('about_mobile.png') no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+  }
+
+  .about article{
+    width: 90%;
+    margin: 10% 5%;
+  }
+
 }
