fixing about link again

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <ul>
         <li><%= link_to 'Work', root_path %></li>
         <li><a href="http://mmitchelldesign.tumblr.com/">Blog</a> </li>
-        <li><a href=<%= root_path %>"about">About</a></li>
+        <li><a href="<%= root_path %>about">About</a></li>
       </ul>
     </nav>
   </section>
